Fix web page being too tall and getting a scrollbar

--- a/frontend/src/components/site-stats/site-stats.less
+++ b/frontend/src/components/site-stats/site-stats.less
@@ -1,9 +1,10 @@
 #site-stats {
-  margin: 10px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: calc(100% - 15px);
+  height: 100%;
+  box-sizing: border-box;
 
   .header {
     text-align: center;
